Scrollbar final fix

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -67,19 +67,19 @@ nav {
 
 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
     -webkit-border-radius: 10px;
     border-radius: 10px;
 }
 
 
 ::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background: rgba(255,0,0,0.8);
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    /*-webkit-border-radius: 10px;
+    border-radius: 10px;*/
+    background: rgba(0,0,0,0.4);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.4);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-    background: rgba(255,0,0,0.4);
+    background: rgba(0,0,0,0.4);
 }
 /*end of scrolling*/
